# suloea

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: LV2Config.cmake  SuloeaConfig.cmake
lv2/: manifest.ttl.in  modgui.ttl.in  stops.h  suloea.c  suloea.cpp  suloea.ttl.in
lv2/modgui/: icon-suloea.html  stylesheet-suloea.css  suloea.js
